# readest

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  package.json  pnpm-workspace.yaml  tsconfig.json
apps/readest-app/: next.config.mjs  package.json  tailwind.config.ts
apps/readest-app/src/app/: layout.tsx
apps/readest-app/src/app/auth/: page.tsx
apps/readest-app/src/app/auth/callback/: page.tsx
apps/readest-app/src/app/auth/error/: page.tsx
apps/readest-app/src/app/offline/: page.tsx
apps/readest-app/src/app/reader/: page.tsx
apps/readest-app/src/app/user/: page.tsx
apps/readest-app/src/components/: AboutWindow.tsx  Alert.tsx  BookDetailModal.tsx  Button.tsx  Dialog.tsx  DropIndicator.tsx  Dropdown.tsx  MenuItem.tsx  Popup.tsx  Providers.tsx  Quota.tsx  Slider.tsx  Spinner.tsx  Toast.tsx  WindowButtons.tsx
apps/readest-app/src/context/: AuthContext.tsx  EnvContext.tsx  PHContext.tsx  SyncContext.tsx
apps/readest-app/src/helpers/: auth.ts  cli.ts  shortcuts.ts  updater.ts
apps/readest-app/src/hooks/: useDrag.ts  useLongPress.ts  useOpenWithBooks.ts  usePullToRefresh.ts  useResponsiveSize.ts  useScreenWakeLock.ts  useShortcuts.ts  useSync.ts  useTheme.ts  useTranslation.ts  useUICSS.ts
apps/readest-app/src/i18n/: i18n.ts
apps/readest-app/src/libs/: document.ts  edgeTTS.ts  storage.ts  sync.ts  user.ts
apps/readest-app/src/pages/: _app.tsx
apps/readest-app/src/pages/api/: sync.ts
apps/readest-app/src/pages/reader/: [ids].tsx
apps/readest-app/src/types/: book.ts  records.ts  settings.ts  system.ts  user.ts  view.ts
(+72 files in other folders)
