# This is the root Cargo configuration file for the Readest project workspace.
[workspace]
# Specifies the members of the workspace, which are the Rust packages included in this project.
members = [
  "apps/readest-app/src-tauri",
  "packages/tauri/crates/tauri",
]
# Sets the resolver version for the workspace, ensuring consistent dependency resolution across members.
# "2" is the newer resolver that provides better dependency conflict resolution.
resolver = "2"

# Defines package-level metadata that applies to all members of the workspace.
[workspace.package]
authors = ["Bilingify LLC"]
homepage = "https://readest.com"
license = "AGPL-3.0"
repository = "https://github.com/readest/readest"
# Categories are commented out as they are not currently used.
categories = []
edition = "2021"
rust-version = "1.77.2"

# This section is used for local development or patching dependencies from crates.io.
[patch.crates-io]
# Specifies a local path to the tauri crate, overriding the one from crates.io.
# This is useful for developing tauri locally alongside readest.
tauri = { path = "packages/tauri/crates/tauri" }